set z-index for hierarchy fix

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <p><mark>This page is under construction. In the meantime, more recent projects available upon request :)</mark></p>
         </section> -->
 <section id="homepage">
-    <div class="pic cyberotica">
+    <div class="pic cyberotica" style="z-index:10;">
         <img src="cyberotica/factoryofthesun2.jpg">
          <div id="label"><span class="labelita">Cyberotica</span><span class="		 			labelreg">2020</span></div>
 </div>
-<div class="pic postcursor">
+<div class="pic postcursor" style="z-index:10;">
         <img src="postcursor/postcursor-01.png">
         <div id="label"><span class="labelita">Postcursor/Starry Nite</span><span class="labelreg">2020</span></div>
 </div>
