copywriting and bg color fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--<div class="querytown"></div>-->
     <section id="about" style="display:none;">
    <!-- <div class="big">Mikki Janower <span class="bigsmall">is a</span> graphic designer<span class="bigsmall"> and </span>art director<span class="bigsmall"> based in</span> Brooklyn.</div>--> 
-    <p>Mikki Janower is a graphic designer and art director based in Brooklyn. Her work reflects her multidisciplinary background, robust visual research, and acute typophilia. She loves freelance projects and collaborations, particularly work skewed towards music and the arts. <br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
+    <p>Mikki Janower is a graphic designer, art director, and web developer based in Brooklyn. She loves found typography, design theory, net art, and loud techno. She's always open to freelance projects and collaborations, particularly those skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
     <img src="assets/headshot.jpg">    
 </section>
 
