--- a/project-index.html
+++ b/project-index.html
@@ -194,7 +194,7 @@
 
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
-        <p>Mikki Janower is a graphic designer, art director, and web developer based in Brooklyn. She loves found typography, design theory, net art, and loud techno. She's always open to freelance projects and collaborations, particularly those skewed towards music and the arts.<br><br>She recently recieved a BFA in Communication Design from Washington University in St. Louis and is currently looking for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
+        <p>Graphic designer, art director, and web developer based in Brooklyn. In my spare time, I work with clients across music, art, publishing, and the nonprofit sector. I'm always looking for new freelance projects and collaborations.<br><br>I recently recieved a BFA in Communication Design from Washington University in St. Louis and am on the lookout for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
     <img src="/assets/headshot.jpg">    
 </section>
     
