--- a/project-index.html
+++ b/project-index.html
@@ -51,14 +51,14 @@
     </div>
 </div>
 <div class="listing">
-    <div class="title">Brett Castro: a/B</div>
-    <div class="description">An album art series</div>
-    <div class="year">2020-ongoing</div>
-    <div class="thumbnails"><img src="thumbnails/p1.jpg"><img src="thumbnails/p2.jpg"></div>
-    <div class="extender" style="display:none;"> <div class="words">a/B is a series of five A-side/B-side EPs by musician Brett Castro. Each offers a resonant glimpse into the artist's psyche: his past, his present, and his hopes for the future.
-        <br><br>Each album artwork in the five-part series features intimate moments in the artist’s life by way of family photographs and sketches by his mother.</div>
-        <div class="images"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
-        <div class="buttons"><a href="https://www.instagram.com/p/CATSIrpB042/" target="_blank">Instagram>></a><a href="https://open.spotify.com/album/7vnNR4n2fxfYmZdVnwZ1OX?si=M6hReyxiS9O5oQNi7bm2eA">Listen on Spotify>></a></div>
+    <div class="title">Emmie James: Dead to Me</div>
+    <div class="description">Album Artwork</div>
+    <div class="year">2020</div>
+    <div class="thumbnails"><img src="thumbnails/deadtome-og.png"><img src="thumbnails/deadtome.png"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Dead to Me</i> is a breakup anthem with an earworm remix. 
+        <br><br> Fittingly, these are killed drafts. The final album artwork, a glowing, eighties-diva-esque portrait captured over Zoom, endures on Spotify.</div>
+        <div class="images"><img src="miniprojects/deadtome/deadtome-og.png"><img src="miniprojects/deadtome/deadtome.png"></div>
+        <div class="buttons"><a href="reflections.html">Listen on Spotify>></a><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -73,6 +73,17 @@
     </div>
 </div>
 <div class="listing">
+    <div class="title">Joshua Leifer dotcom</div>
+    <div class="description">A writerly portfolio site</div>
+    <div class="year">2020</div>
+    <div class="thumbnails"><img src="thumbnails/jleifer1.png"><img src="thumbnails/jleifer2.png"></div>
+    <div class="extender" style="display:none;"> <div class="words">An animated typing effect and stripped-down formatting for Joshua Leifer, assistant editor at Jewish Currents.
+    </div>
+        <div class="images"><img src="miniprojects/joshualeifer/joshualeifer.gif"><img src="miniprojects/joshualeifer/jleifer2.png"></div>
+        <div class="buttons"><a href="reflections.html">Listen on Spotify>></a><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
+    </div>
+</div>
+<div class="listing">
     <div class="title">Reflections on Practice</div>
     <div class="description">Not a process book</div>
     <div class="year">2019</div>
@@ -81,6 +92,17 @@
         <br><br>Each book synthesizes traditional methods of process documentation with relevant essays and ruminations. The result is an intimate but robust reflection on learning in the institutional sphere.</div>
         <div class="images"><img src="reflections/IMG_6544-copy.jpg"><img src="reflections/IMG_6714-copy.jpg"></div>
         <div class="buttons"><a href="reflections.html">Read More>></a><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
+    </div>
+</div>
+<div class="listing">
+    <div class="title">Brett Castro: a/B</div>
+    <div class="description">An album art series</div>
+    <div class="year">2020-ongoing</div>
+    <div class="thumbnails"><img src="thumbnails/p1.jpg"><img src="thumbnails/p2.jpg"></div>
+    <div class="extender" style="display:none;"> <div class="words">a/B is a series of five A-side/B-side EPs by musician Brett Castro. Each offers a resonant glimpse into the artist's psyche: his past, his present, and his hopes for the future.
+        <br><br>Each album artwork in the five-part series features intimate moments in the artist’s life by way of family photographs and sketches by his mother.</div>
+        <div class="images"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/CATSIrpB042/" target="_blank">Instagram>></a><a href="https://open.spotify.com/album/7vnNR4n2fxfYmZdVnwZ1OX?si=M6hReyxiS9O5oQNi7bm2eA">Listen on Spotify>></a></div>
     </div>
 </div>
 <div class="listing">
