--- a/project-index.html
+++ b/project-index.html
@@ -51,8 +51,8 @@
     </div>
 </div>
 <div class="listing">
-    <div class="title">Emmie James: Dead to Me</div>
-    <div class="description">Album Artwork</div>
+    <div class="title">Dead to Me</div>
+    <div class="description">Album art for Emmie James</div>
     <div class="year">2020</div>
     <div class="thumbnails"><img src="thumbnails/deadtome-og.png"><img src="thumbnails/deadtome.png"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Dead to Me</i> is a breakup anthem with an earworm remix. 
@@ -95,8 +95,8 @@
     </div>
 </div>
 <div class="listing">
-    <div class="title">Brett Castro: a/B</div>
-    <div class="description">An album art series</div>
+    <div class="title">a/B parts I-V</div>
+    <div class="description">An album art series for Brett Castro</div>
     <div class="year">2020-ongoing</div>
     <div class="thumbnails"><img src="thumbnails/p1.jpg"><img src="thumbnails/p2.jpg"></div>
     <div class="extender" style="display:none;"> <div class="words">a/B is a series of five A-side/B-side EPs by musician Brett Castro. Each offers a resonant glimpse into the artist's psyche: his past, his present, and his hopes for the future.
