hiding new listings for now

--- a/project-index.html
+++ b/project-index.html
@@ -50,17 +50,17 @@
         <div class="buttons"><a href="postcursor.html">Read More>></a><a href="https://www.instagram.com/p/B_vb9tahASX/">Instagram>></a></div>
     </div>
 </div>
-<div class="listing">
+<!--<div class="listing">
     <div class="title">Dead to Me</div>
     <div class="description">Album art for Emmie James</div>
     <div class="year">2020</div>
     <div class="thumbnails"><img src="thumbnails/deadtome-og.png"><img src="thumbnails/deadtome.png"></div>
     <div class="extender" style="display:none;"> <div class="words"><i>Dead to Me</i> is a breakup anthem with an earworm remix. 
-        <br><br> Fittingly, these are killed drafts. The final album artwork, a glowing, eighties-diva-esque portrait captured over Zoom, endures on Spotify.</div>
+        <br><br> Fittingly, these are killed drafts. The final album artwork, a glowing, eighties-diva-esque portrait captured over Zoom, coming soon to Spotify.</div>
         <div class="images"><img src="miniprojects/deadtome/deadtome-og.png"><img src="miniprojects/deadtome/deadtome.png"></div>
-        <div class="buttons"><a href="reflections.html">Listen on Spotify>></a><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
     </div>
-</div>
+</div>-->
 <div class="listing">
     <div class="title">Cocktails of the Major Arcana</div>
     <div class="description">Mixology for pagans</div>
@@ -72,7 +72,7 @@
         <div class="buttons"><a href="majorarcana.html">Read More>></a><a target="_blank" href="https://www.instagram.com/p/B3aQOOEBF-N/">Instagram>></a></div>
     </div>
 </div>
-<div class="listing">
+<!--<div class="listing">
     <div class="title">Joshua Leifer dotcom</div>
     <div class="description">A writerly portfolio site</div>
     <div class="year">2020</div>
@@ -80,9 +80,9 @@
     <div class="extender" style="display:none;"> <div class="words">An animated typing effect and stripped-down formatting for Joshua Leifer, assistant editor at Jewish Currents.
     </div>
         <div class="images"><img src="miniprojects/joshualeifer/joshualeifer.gif"><img src="miniprojects/joshualeifer/jleifer2.png"></div>
-        <div class="buttons"><a href="reflections.html">Listen on Spotify>></a><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
     </div>
-</div>
+</div>-->
 <div class="listing">
     <div class="title">Reflections on Practice</div>
     <div class="description">Not a process book</div>
