--- a/project-index.html
+++ b/project-index.html
@@ -50,7 +50,7 @@
         <div class="buttons"><a href="postcursor.html">Read More>></a><a href="https://www.instagram.com/p/B_vb9tahASX/">Instagram>></a></div>
     </div>
 </div>
-<!--<div class="listing">
+<div class="listing">
     <div class="title">Dead to Me</div>
     <div class="description">Album art for Emmie James</div>
     <div class="year">2020</div>
@@ -58,7 +58,7 @@
     <div class="extender" style="display:none;"> <div class="words"><i>Dead to Me</i> is a breakup anthem with an earworm remix. 
         <br><br> Fittingly, these are killed drafts. The final album artwork, a glowing, eighties-diva-esque portrait captured over Zoom, coming soon to Spotify.</div>
         <div class="images"><img src="miniprojects/deadtome/deadtome-og.png"><img src="miniprojects/deadtome/deadtome.png"></div>
-        <div class="buttons"><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/CCWXZmtBz9K/" target="_blank">Instagram>></a></div>
     </div>
 </div>-->
 <div class="listing">
@@ -72,7 +72,7 @@
         <div class="buttons"><a href="majorarcana.html">Read More>></a><a target="_blank" href="https://www.instagram.com/p/B3aQOOEBF-N/">Instagram>></a></div>
     </div>
 </div>
-<!--<div class="listing">
+<div class="listing">
     <div class="title">Joshua Leifer dotcom</div>
     <div class="description">A writerly portfolio site</div>
     <div class="year">2020</div>
@@ -80,9 +80,9 @@
     <div class="extender" style="display:none;"> <div class="words">An animated typing effect and stripped-down formatting for Joshua Leifer, assistant editor at Jewish Currents.
     </div>
         <div class="images"><img src="miniprojects/joshualeifer/joshualeifer.gif"><img src="miniprojects/joshualeifer/jleifer2.png"></div>
-        <div class="buttons"><a href="https://www.instagram.com/p/B6GiuLahX7B/" target="_blank">Instagram>></a></div>
+        <div class="buttons"><a href="http://joshualeifer.com/" target="_blank">Visit>></a></div>
     </div>
-</div>-->
+</div>
 <div class="listing">
     <div class="title">Reflections on Practice</div>
     <div class="description">Not a process book</div>
@@ -216,7 +216,7 @@
 
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
-        <p>Graphic designer, art director, and web developer based in Brooklyn. In my spare time, I work with clients across music, art, publishing, and the nonprofit sector. I'm always looking for new freelance projects and collaborations.<br><br>I recently recieved a BFA in Communication Design from Washington University in St. Louis and am on the lookout for postgraduate opportunities. Previous clients include Nike and The Governor's Ball Music Festival; previous internships include The Collected Works.</p>
+        <p>Mikki Janower is a designer and art director working across editorial layout, interaction design and branding. She is currently based in Brooklyn, NY.<br><br>She maintains an active freelance practice with a focus on cultural work. Current clients include The Guggenheim Museum; past clients include Nike and Governor's Ball Music Festival. She recently recieved a BFA in Communication Design from Washington University in St. Louis and is on the lookout for postgraduate opportunities. She looooves freelance work, collaborations, and new friends — drop her a line!</p>
     <img src="/assets/headshot.jpg">    
 </section>
     
