--- a/project-index.html
+++ b/project-index.html
@@ -60,7 +60,7 @@
         <div class="images"><img src="miniprojects/deadtome/deadtome-og.png"><img src="miniprojects/deadtome/deadtome.png"></div>
         <div class="buttons"><a href="https://www.instagram.com/p/CCWXZmtBz9K/" target="_blank">Instagram>></a></div>
     </div>
-</div>-->
+</div>
 <div class="listing">
     <div class="title">Cocktails of the Major Arcana</div>
     <div class="description">Mixology for pagans</div>
