order & insta link update

--- a/project-index.html
+++ b/project-index.html
@@ -51,17 +51,6 @@
     </div>
 </div>
 <div class="listing">
-    <div class="title">Dead to Me</div>
-    <div class="description">Album art for Emmie James</div>
-    <div class="year">2020</div>
-    <div class="thumbnails"><img src="thumbnails/deadtome-og.png"><img src="thumbnails/deadtome.png"></div>
-    <div class="extender" style="display:none;"> <div class="words"><i>Dead to Me</i> is a breakup anthem with an earworm remix. 
-        <br><br> Fittingly, these are killed drafts. The final album artwork, a glowing, eighties-diva-esque portrait captured over Zoom, coming soon to Spotify.</div>
-        <div class="images"><img src="miniprojects/deadtome/deadtome-og.png"><img src="miniprojects/deadtome/deadtome.png"></div>
-        <div class="buttons"><a href="https://www.instagram.com/p/CCWXZmtBz9K/" target="_blank">Instagram>></a></div>
-    </div>
-</div>
-<div class="listing">
     <div class="title">Cocktails of the Major Arcana</div>
     <div class="description">Mixology for pagans</div>
     <div class="year">2020</div>
@@ -80,7 +69,7 @@
     <div class="extender" style="display:none;"> <div class="words">An animated typing effect and stripped-down formatting for Joshua Leifer, assistant editor at Jewish Currents.
     </div>
         <div class="images"><img src="miniprojects/joshualeifer/joshualeifer.gif"><img src="miniprojects/joshualeifer/jleifer2.png"></div>
-        <div class="buttons"><a href="http://joshualeifer.com/" target="_blank">Visit>></a></div>
+        <div class="buttons"><a href="http://joshualeifer.com/" target="_blank">Visit>></a><a target="_blank" href="https://www.instagram.com/p/CCbsMpnBVxQ/">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
@@ -103,6 +92,17 @@
         <br><br>Each album artwork in the five-part series features intimate moments in the artist’s life by way of family photographs and sketches by his mother.</div>
         <div class="images"><img src="miniprojects/aB/p1.jpg"><img src="miniprojects/aB/p2.jpg"></div>
         <div class="buttons"><a href="https://www.instagram.com/p/CATSIrpB042/" target="_blank">Instagram>></a><a href="https://open.spotify.com/album/7vnNR4n2fxfYmZdVnwZ1OX?si=M6hReyxiS9O5oQNi7bm2eA">Listen on Spotify>></a></div>
+    </div>
+</div>
+<div class="listing">
+    <div class="title">Dead to Me</div>
+    <div class="description">Album art for Emmie James</div>
+    <div class="year">2020</div>
+    <div class="thumbnails"><img src="thumbnails/deadtome-og.png"><img src="thumbnails/deadtome.png"></div>
+    <div class="extender" style="display:none;"> <div class="words"><i>Dead to Me</i> is a breakup anthem with an earworm remix. 
+        <br><br> Fittingly, these are killed drafts. The final album artwork, a glowing, eighties-diva-esque portrait captured over Zoom, coming soon to Spotify.</div>
+        <div class="images"><img src="miniprojects/deadtome/deadtome-og.png"><img src="miniprojects/deadtome/deadtome.png"></div>
+        <div class="buttons"><a href="https://www.instagram.com/p/CCWXZmtBz9K/" target="_blank">Instagram>></a></div>
     </div>
 </div>
 <div class="listing">
