added an oxford comma, because duh

--- a/project-index.html
+++ b/project-index.html
@@ -216,7 +216,7 @@
 
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
-        <p>Mikki Janower is a designer and art director working across editorial layout, interaction design and branding. She is currently based in Brooklyn, NY.<br><br>She maintains an active freelance practice with a focus on cultural work. Current clients include The Guggenheim Museum; past clients include Nike and Governor's Ball Music Festival. She recently recieved a BFA in Communication Design from Washington University in St. Louis and is on the lookout for postgraduate opportunities. She looooves freelance work, collaborations, and new friends — drop her a line!</p>
+        <p>Mikki Janower is a designer and art director working across editorial layout, interaction design, branding, and typography. She is currently based in Brooklyn, NY.<br><br>She maintains an active freelance practice with a focus on cultural work. Current clients include The Guggenheim Museum; past clients include Nike and Governor's Ball Music Festival. She recently recieved a BFA in Communication Design from Washington University in St. Louis and is on the lookout for postgraduate opportunities. She looooves freelance work, collaborations, and new friends — drop her a line!</p>
     <img src="/assets/headshot.jpg">    
 </section>
     
