index --> contact button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="top">
     <a class="name">Mikki</a>
     <a class="flip about">About</a>
-    <a class="flip list">Index</a>
+    <a href="mailto:mikki@janower.net" target="_blank" class="flip list">Contact</a>
     </section>
 
 <!--<div class="querytown"></div>-->
