OKAYYY last fixes

--- a/armour.html
+++ b/armour.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Mikki Janower — Armour Showreel</title>
+    <title>Mikki Janower — Armour Magazine</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +17,7 @@
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
-    <a class="projectTitle">Armour Showreel</a>
+    <a class="projectTitle">Armour Magazine</a>
     <a class="flip index" href="index.html">Index</a>
     </section>
 <!--------------------------insert project information in this section ONLY----------------------->
@@ -68,7 +68,7 @@
         </div>
 </section>
 
-    <script type="text/javascript">const title= "Armour Showreel";</script>
+    <script type="text/javascript">const title= "Armour Magazine";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section class="bottom sticky">
