--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
 </div>
 <div class="listing full">
-    <div class="title">Armour Magazine Showreel</div>
+    <div class="title">Armour Magazine</div>
     <div class="description">Selects from 4 years of creative direction</div>
     <div class="thumbnails"><img src="thumbnails/armour1.jpg"><img src="thumbnails/armour2.jpg"><img src="thumbnails/armour3.jpg"></div>
     <div class="extender" data-link="armour.html" data-target="" style="display:none;"> <div class="words" style="display:none;">Commissions, collaborations, and fever dreams compiled over the course of four years at <i>Armour</i>. 
@@ -213,7 +213,7 @@
     <div class="title">Various Posters</div>
     <div class="description">Experiments, exercises, et cetera.</div>
     <div class="thumbnails"><img src="thumbnails/poster.jpg"></div>
-    <div class="extender" data-link="https://www.instagram.com/p/B74DGN9B2Gj/" target="_blank" style="display:none;"> <div class="words" style="display:none;"><i>Tenets of Anarchic Design</i> (an oxymoron) offers a set of loose guidelines for a design ethos that rejects the boundaries we recognize today and proposes an outspoken, decolonized practice.
+    <div class="extender" data-link="https://www.instagram.com/p/B_7mjGmBFlf/" target="_blank" style="display:none;"> <div class="words" style="display:none;"><i>Tenets of Anarchic Design</i> (an oxymoron) offers a set of loose guidelines for a design ethos that rejects the boundaries we recognize today and proposes an outspoken, decolonized practice.
         <br><br>Inspired by <a href="https://www.are.na/liminism/liminism">this Are.na channel,</a> and also by <a href = "https://www.are.na/devin/towards-a-marxist-design-practice">this one.</a></div>
         <div class="images"><img src="miniprojects/booksellers/poster.png"><img src="miniprojects/anarchic/poster.jpg"></div>
        
