--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 </head>
 <body>
-    <section class="top">
+    <section class="main top" style="grid-template-columns: 29% 35.5% 35.5%">
     <a class="name">Mikki</a>
     <a class="flip about">About</a>
     <a href="mailto:mikki@janower.net" target="_blank" class="flip list">Contact</a>
