fix & type test

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="listing firstfeature">
         <div class="title" data-title="Cyberotica" data-link="cyberotica.html">Cyberotica</div>
-        <div class="description">On art, sex, & robots</div>
+        <div class="description">Technology & fetish in contemporary art</div>
         <div class="thumbnails"><img src="thumbnails/factoryofthesun2.jpg"><img src="thumbnails/factoryofthesun.jpg"><img src="thumbnails/contents2.jpg"></div>
     <div class="extender" data-link="cyberotica.html" data-target="" style="display:none;"> <div class="words" style="display:none;"><i>Cyberotica</i> compiles recent works by over fifty artists—including Jacolby Satterwhite, Hito Steyerl, and Marguerite Humeau—to explore a prominent motif in the contemporary oeuvre: the chimera of fetish and technology.
        <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
