--- a/reflections.html
+++ b/reflections.html
@@ -30,7 +30,7 @@
             <div id="label"><span class="labelita">Reflections on Practice</span><span class="labelreg">2019</span></div>
     </div>
     <div id="description"><p><i>Reflections on Practice</i> documents and discusses my creative output over the course of six months at Washington University in St. Louis. The series chronicles experiments in print design, web development, drone photography, and microfiction.</p>
-        <p>Each book synthesizes traditional methods of process documentation with my own written ruminations and relevant essays to present an intimate but robust reflection on creative praxis and learning in the institutional sphere.</p>
+        <p>Each book synthesizes traditional methods of process documentation with found essays and written ruminations. The result is an intimate but robust reflection on learning in the institutional sphere.</p>
     <div class="detail"><p>Compiled and designed over the course of the Fall 2019 semester</p><p>Sam Fox School of Design & Visual Arts</p></div>
 </div>
 
