Added posters case study!

--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -46,7 +46,7 @@
        
         <div id="projfooter">
             <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="cyberotica.html">Next</a>
+            <a class="flip" href="posters.html">Next</a>
         </div>
         </section>
 
