--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
     <div class="title">Various Posters</div>
     <div class="description">Experiments, exercises, et cetera.</div>
     <div class="thumbnails"><img src="thumbnails/poster.jpg"></div>
-    <div class="extender" data-link="https://www.instagram.com/p/B_7mjGmBFlf/" target="_blank" style="display:none;"> <div class="words" style="display:none;"><i>Tenets of Anarchic Design</i> (an oxymoron) offers a set of loose guidelines for a design ethos that rejects the boundaries we recognize today and proposes an outspoken, decolonized practice.
-        <br><br>Inspired by <a href="https://www.are.na/liminism/liminism">this Are.na channel,</a> and also by <a href = "https://www.are.na/devin/towards-a-marxist-design-practice">this one.</a></div>
-        <div class="images"><img src="miniprojects/booksellers/poster.png"><img src="miniprojects/anarchic/poster.jpg"></div>
+    <div class="extender" data-link="posters.html" target="" style="display:none;"> <div class="words" style="display:none;">A collection of posters made here and there, for assorted reasons or no reason whatsoever. 
+        <br><br><i>Tenets of Anarchic Design</i> was inspired by <a href="https://www.are.na/liminism/liminism">this Are.na channel,</a> and also by <a href = "https://www.are.na/devin/towards-a-marxist-design-practice">this one.</a> Save Indepent Booksellers outlines steps we can take to protect bookstores and small publishers. More soon :)</div>
+        <div class="images"><img src="miniprojects/posters/booksellers.png"><img src="miniprojects/posters/anarchic.jpg"></div>
        
-        <div class="details"><span>2019</span></div>
+        <div class="details"><span>Ongoing</span></div>
     </div>
 </div>
 <!--<div class="listing">
