added case study, etc

--- a/armour.html
+++ b/armour.html
@@ -63,7 +63,7 @@
     </section>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="reflections.html">Back</a>
             <a class="flip" href="majorarcana.html">Next</a>
         </div>
 </section>
