--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -45,7 +45,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="foundsoundscapes.html">Back</a>
             <a class="flip" href="posters.html">Next</a>
         </div>
         </section>
