--- a/majorarcana.html
+++ b/majorarcana.html
@@ -46,8 +46,8 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="reflections.html">Next</a>
+            <a class="flip" href="armour.html">Back</a>
+            <a class="flip" href="joshualeifer.html">Next</a>
         </div>
         </section>
 
