--- a/reflections.html
+++ b/reflections.html
@@ -55,8 +55,8 @@
          </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="spiritmolecule.html">Next</a>
+            <a class="flip" href="postcursor.html">Back</a>
+            <a class="flip" href="armour.html">Next</a>
         </div>
         </section>
 
