--- a/posters.html
+++ b/posters.html
@@ -41,8 +41,8 @@
          </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="cyberotica.html">Next</a>
+            <a class="flip" href="discoveryourair.html">Back</a>
+            <a class="flip" href="quarterly.html">Next</a>
         </div>
         </section>
 
