--- a/cyberotica.html
+++ b/cyberotica.html
@@ -15,6 +15,7 @@
 
 </head>
 <body>
+    <!--<div class="querytown"></div>-->
     <section class="top sticky">
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
@@ -86,6 +87,7 @@
     <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
     <a class="flip" href="https://linkedin.com/in/mtjanower" target="_blank">LinkedIn</a>
     </section>
+
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
     <script src="assets/jquery.min.js"></script>
