--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -30,6 +30,7 @@
             <div id="label"><span class="labelita">Joshua Leifer dotcom</span><span class="labelreg">2020</span></div>
     </div>
     <div id="description"><p>An animated typing effect and stripped-down formatting for <a href = "https://joshualeifer.com" target="_blank">Joshua Leifer,</a> assistant editor at <a href="https://jewishcurrents.org" target="_blank">Jewish Currents.</a></p>
+    <p> Designed to reference the editorial process, the site features word processor-inspired typography, a draggable information panel, and a bibliography-inspired mobile index.</p>
     <div class="detail"><p>Visit the site <a href="www.joshualeifer.com" target= "_blank>">here.</a></p><p>Find Josh on  <a href="https://jewishcurrents.org/author/joshua-leifer/" target= "_blank">Jewish Currents.</a></p></div>
     </div>
 
@@ -43,11 +44,10 @@
             <img src="joshualeifer/jleifer-10.png">  
             <img src="joshualeifer/jleifer-07.png">
         </div>
-        <img src="joshualeifer/joshbig.gif">
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="majorarcana.html">Back</a>
             <a class="flip" href="reconnatypeface.html">Next</a>
         </div>
         </section>
