--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <div class="description">A video game for nihilists</div>
     <div class="year"><span>2019</span></div> 
     <div class="thumbnails"><img src="thumbnails/thumbnail.png"></div>
-    <div class="extender" data-link="https://mikki-janower.github.io/supermariovoid/" data-target="_blank" style="display:none;"> <div class="words" style="display:none;">Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out.
+    <div class="extender" data-link="mariovoid.html" data-target="" style="display:none;"> <div class="words" style="display:none;">Play Nintendo à la Nietzsche! Help your favorite cartoon run ceaselessly into a neverending abyss—before time runs out.
         <br><br>This game is unaffiliated with the Super Mario Bros franchise and all too relevant to our interminable, meaningless existence.</div>
-        <div class="images"><img src="miniprojects/mariovoid/thumbnail.png"><img src="miniprojects/mariovoid/screengrab.png"></div>
+        <div class="images"><img src="mariovoid/thumbnail.png"><img src="mariovoid/gameover.png"></div>
      
     </div>
 </div>
