--- a/mariovoid.html
+++ b/mariovoid.html
@@ -47,7 +47,7 @@
         </div>
         </section>
 
-        <script type="text/javascript">const title= "The Spirit Molecule";</script>
+        <script type="text/javascript">const title= "Super Mario Void";</script>
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section id="about" style="display:none;">
