--- a/posters.html
+++ b/posters.html
@@ -37,7 +37,7 @@
         <img src="miniprojects/posters/anarchic.jpg">
         <div id="label"><span class="caption"><i>Tenets for Anarchic Design</i></span><span class="citation">Guidelines for a more outspoken, decolonized practice. Inspired by <a href="https://www.are.na/liminism/liminism" target="_blank">this Are.na channel.</a></span></div>
         <img src="miniprojects/posters/FALC.png">
-        <div id="label"><span class="caption"><i>FALC</i></span><span class="citation">Inspired by <i>Fully Automated Luxury Communidm</i>, a manifesto by Aaron Bastani.</span></div>
+        <div id="label"><span class="caption"><i>FALC</i></span><span class="citation">Inspired by <i>Fully Automated Luxury Communism</i>, a manifesto by Aaron Bastani.</span></div>
          </div>
        
         <div id="projfooter">
