--- a/posters.html
+++ b/posters.html
@@ -29,7 +29,7 @@
             <img src="miniprojects/posters/booksellers.png">
             <div id="label"><span class="caption"><i>Save Independent Booksellers</i></span><span class="citation">Easy ways to support the bookstores and small publishers that make up the backbone of our creative community. Share on Instagram <a href="https://www.instagram.com/p/B_7mjGmBFlf/" target="_blank">here.</a></span></div>
     </div>
-    <div id="description"><p>Assorted posters made for assorted reasons, or for no reason whatsoever. Each is research-based & conceptually driven, but that's beside the point.</p>
+    <div id="description"><p>Assorted posters made for assorted reasons, or for no reason whatsoever. Each is research-based & conceptually driven (but that's beside the point).</p>
     <div class="detail"><p>Updated regularly</a></p><p>More coming soon</p></div>
     </div>
 
