--- a/quarterly.html
+++ b/quarterly.html
@@ -60,7 +60,7 @@
        
         <div id="projfooter">
             <a class="flip" href="posters.html">Back</a>
-            <a class="flip" href="cyberotica.html">Next</a>
+            <a class="flip" href="mariovoid.html">Next</a>
         </div>
         </section>
 
