--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 </div>-->
 
 <div class="more">
-  <span>Looking for something? More available upon request — <a href = "mailto:mikki@janower.net">ask away :)</a> </span> <span>Janower 2020</span>
+  <span>Looking for something? More available upon request — <a href = "mailto::mikki@janower.net">ask away :)</a> </span> <span>Janower 2020</span>
 </div>
 
 </section>  
