--- a/index.html
+++ b/index.html
@@ -251,7 +251,11 @@
 
 </section>  
     
-    <script src="assets/jquery.min.js"></script>
+   <!--<script src="assets/jquery.min.js"></script>-->
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/index.js"></script>
     <script src="js/universal.js"></script>
