--- a/reflections.html
+++ b/reflections.html
@@ -47,7 +47,7 @@
         </div>
         <img src="reflections/IMG_6605-copy.jpg">
         <div class="diptych">
-            <img src="reflections/IMG_6785.jpg">
+            <img src="reflections/IMG_6785-copy.jpg">
             <img src="reflections/IMG_6772.jpg">
         </div>
         <img src="reflections/IMG_6800-copy.jpg">
