--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
     </div>
 </div>
 <div class="listing firstfeature">
+    <div class="title" data-title="A Community is a Garden" data-link="community.html">A Community is a Garden</div>
+    <div class="description">A toolkit for artists, communities, and institutions</div>
+    <div class="year"><span>2020</span></div>
+    <div class="thumbnails"><img src="thumbnails/community1.jpg"><img src="thumbnails/community2.jpg"></div>
+<div class="extender" data-link="community.html" data-target="" style="display:none;"> <div class="words" style="display:none;">Describing the power and beauty of adaptive relationships, @adriennemareebrown writes that “species only survive if they learn to be in community,” and that these “critical, deep, and authentic connections [are] a thread that can be tugged for support and resilience”. By deepening, building, and reshaping our relationships to one another and to other elements of the natural world, art has the ability to create unpredictable social transformation. 
+   <br><br>Spanning gender politics, decolonization, and techno-utopianism, <i>Cyberotica</i> presents a vast narrative of identity and protest.</div>
+    <div class="images"><img src="community/cover.jpg"><img src="community/contents.jpg"></div>
+    
+</div>
+</div>
+<div class="listing full">
         <div class="title" data-title="Cyberotica" data-link="cyberotica.html">Cyberotica</div>
         <div class="description">Technology & fetish in contemporary art</div>
         <div class="year"><span>2020</span></div>
