--- a/community.html
+++ b/community.html
@@ -32,7 +32,7 @@
     <div id="description"><p><i>A Community is a Garden</i> is a toolkit for artistic practice towards grassroots change.</p>
         <p>Describing the power of adaptive relationships, adrienne maree brown writes that “species only survive if they learn to be in community,” and that these “critical, deep, and authentic connections [are] a thread that can be tugged for support and resilience”. Only by radical communion can we survive in and transform our world.</p>
         <p>This book was developed over the course of the inaugural Summer Research Practicum at the <a href="https://www.guggenheim.org/" target="_blank">Guggenheim Museum.</a> You can read, print, and share it for free at <a href="https://arena-attachments.s3.amazonaws.com/9400568/b17b697286cc21f202f2f8458bdbc35b.pdf?1604622316" target="_blank">bit.ly/CommunityGardenToolkit</a>.</p>
-    <div class="detail"><p>1 color, 72 pages</p><p></p></div>
+    <div class="detail"><p>A collective effort with:<br>Kanyinsola Anifowoshe<br><a href="jordanjweber.com" target="_blank">Jordan Weber</a><br><a href="https://arthistory.wustl.edu/people/ila-sheren" target="_blank">Ila N. Sheren</a><br><a href="brianharnetty.com" target="_blank">Brian Harnetty</a><br>Cheryl Blosser<br>Efe Igor<br></p><p><a href="birdcloset.com" target="_blank">Bird Closet</a><br><a href="genomicgastronomy.com" target="_blank">Center for Genomic Gastronomy</a><br>Rob, Alicia, and Syd Gee<br><a href="prestoncthompson.com" target="_blank">Preston Thompson</a><br><a href="http://jackiiepopjes.com/" target="_blank">Jackiie Popjes</a><br></p></div>
 </div>
 
     <div id="gallery">
@@ -43,7 +43,9 @@
                 <img src="community/20-21.jpg">
                 <img src="community/14-15.jpg">  
             </div>
-            <img src="community/12-13.jpg">
+            <div><img src="community/12-13.jpg">
+                <div id="label"><span class="caption"><i>Font in use: Minipax</i></span><span class="citation">Raphaël Ronot for Velvetyle Type Foundry</span></div>
+            </div>
             <div class="triptych">
                 <img src="community/44-45.jpg">
                 <img src="community/48-49.jpg">
