--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -29,9 +29,9 @@
             <img src="joshualeifer/jleifer1.png">
             <div id="label"><span class="labelita">Joshua Leifer dotcom</span><span class="labelreg">2020</span></div>
     </div>
-    <div id="description"><p>An animated typing effect and stripped-down formatting for <a href = "https://joshualeifer.com" target="_blank">Joshua Leifer,</a> assistant editor at <a href="https://jewishcurrents.org" target="_blank">Jewish Currents.</a></p>
+    <div id="description"><p>An animated typing effect and stripped-down formatting for writer, editor, and reporter <a href = "https://joshualeifer.com" target="_blank">Joshua Leifer.</a></p>
     <p> Designed to reference the editorial process, the site features word processor-inspired typography, a draggable information panel, and a bibliography-inspired mobile index.</p>
-    <div class="detail"><p>Visit the site <a href="www.joshualeifer.com" target= "_blank>">here.</a></p><p>Find Josh on  <a href="https://jewishcurrents.org/author/joshua-leifer/" target= "_blank">Jewish Currents.</a></p></div>
+    <div class="detail"><p><a href="www.joshualeifer.com" target= "_blank>">Visit the site.</a></p><p>Find Josh on  <a href="https://jewishcurrents.org/author/joshua-leifer/" target= "_blank">Jewish Currents.</a></p></div>
     </div>
 
     <div id="gallery">
