--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 </div>
 <div class="listing full">
     <div class="info"><span class="title">Found Soundscapes</span>
-         <span class="description">Phonetic poetry from the streets of Florence</span>
-        <br><span class="year">2019</span></div>
+        <br>  <span class="description">Phonetic poetry from the streets of Florence</span>
+      <span class="year">2019</span></div>
     <div class="thumbnails"><img src="thumbnails/IMG_1099.jpg"><img src="thumbnails/IMG_1090.jpg"></div>
     <div class="extender" data-link="foundsoundscapes.html" data-target="" style="display:none;"> 
         <div class="images"><img src="soundscapes/IMG_1099.jpg"><img src="soundscapes/IMG_1090.jpg"></div>
@@ -236,8 +236,8 @@
 </div>-->
 <div class="listing">
     <div class="info"><span class="title">Assorted Posters</span>
-    <span class="description">Experiments, exercises, et cetera</span>
-    <br><span class="year">Ongoing</span></div> 
+        <br><span class="description">Experiments, exercises, et cetera</span>
+    <span class="year">Ongoing</span></div> 
     <div class="thumbnails"><img src="thumbnails/poster.jpg"></div>
     <div class="extender" data-link="posters.html" target="" style="display:none;"> 
         <div class="images"><img src="miniprojects/posters/booksellers.png"><img src="miniprojects/posters/anarchic.jpg"></div>
