--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 
 <head>
-    <title>Mikki Janower dot Work</title>
+    <title>Mikki Janower (dot) Work</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -171,6 +171,7 @@
 <div class="listing full">
     <div class="info"><span class="title">Found Soundscapes</span>
         <br>  <span class="description">Phonetic poetry from the streets of Florence</span>
+        <div class="type">Design, writing, and research</div>
       <span class="year">2019</span></div>
     <div class="thumbnails"><img src="thumbnails/IMG_1099.jpg"><img src="thumbnails/IMG_1090.jpg"></div>
     <div class="extender" data-link="foundsoundscapes.html" data-target="" style="display:none;"> 
@@ -237,6 +238,7 @@
 <div class="listing">
     <div class="info"><span class="title">Assorted Posters</span>
         <br><span class="description">Experiments, exercises, et cetera</span>
+        <div class="type">Design, writing, and research</div>
     <span class="year">Ongoing</span></div> 
     <div class="thumbnails"><img src="thumbnails/poster.jpg"></div>
     <div class="extender" data-link="posters.html" target="" style="display:none;"> 
