--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -31,7 +31,7 @@
     </div>
     <div id="description"><p>An animated typing effect and stripped-down formatting for writer, editor, and reporter <a href = "https://joshualeifer.com" target="_blank">Joshua Leifer.</a></p>
     <p> Designed to reference the editorial process, the site features word processor-inspired typography, a draggable information panel, and a bibliography-inspired mobile index.</p>
-    <div class="detail"><p><a href="www.joshualeifer.com" target= "_blank>">Visit the site.</a></p><p>Find Josh on  <a href="https://jewishcurrents.org/author/joshua-leifer/" target= "_blank">Jewish Currents.</a></p></div>
+    <div class="detail"><p><a href="https://www.joshualeifer.com" target= "_blank>">Visit the site.</a></p><p>Find Josh on  <a href="https://jewishcurrents.org/author/joshua-leifer/" target= "_blank">Jewish Currents.</a></p></div>
     </div>
 
     <div id="gallery">
