--- a/armour.html
+++ b/armour.html
@@ -63,8 +63,8 @@
     </section>
        
         <div id="projfooter">
-            <a class="flip" href="reflections.html">Back</a>
-            <a class="flip" href="majorarcana.html">Next</a>
+            <a class="flip" href="joshualeifer.html">Back</a>
+            <a class="flip" href="discoveryourair.html">Next</a>
         </div>
 </section>
 
@@ -72,11 +72,9 @@
    
 <!--------------------------UNIFORM—don't change anything BELOW this line------------------------->
     <section class="bottom sticky">
-    <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
+    <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
-    <a class="flip" href="assets/Mikki_Janower_Resume.pdf" target="_blank">Resume</a>
     <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
-    <a class="flip" href="https://linkedin.com/in/mtjanower" target="_blank">LinkedIn</a>
     </section>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/instantclick/3.1.0/instantclick.min.js"></script>
