--- a/cyberotica.html
+++ b/cyberotica.html
@@ -69,7 +69,7 @@
        
         <div id="projfooter">
             <a class="flip" href="index.html">Back</a>
-            <a class="flip" href="postcursor.html">Next</a>
+            <a class="flip" href="joshualeifer.html">Next</a>
         </div>
         </section>
 
@@ -81,7 +81,7 @@
     <img src="/assets/headshot.jpg">    
 </section>
     <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
+        <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
         <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
         <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     </section>
