--- a/postcursor.html
+++ b/postcursor.html
@@ -18,7 +18,7 @@
     <a class="name">Mikki Janower<span class="dot">&nbsp dot &nbsp</span>Work</a>
 <!---------------------project title—change meeeeee---------------------------------->
     <a class="projectTitle">Postcursor</a>
-    <a class="flip index">Index</a>
+    <a href="index.html" class="flip index">Index</a>
     </section>
 
 <!--------------------------insert project information in this section ONLY----------------------->
@@ -50,8 +50,8 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="cyberotica.html">Back</a>
-            <a class="flip" href="reflections.html">Next</a>
+            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="majorarcana.html">Next</a>
         </div>
         </section>
 
