--- a/quarterly.html
+++ b/quarterly.html
@@ -59,7 +59,7 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="posters.html">Back</a>
+            <a class="flip" href="index.html">Back</a>
             <a class="flip" href="mariovoid.html">Next</a>
         </div>
         </section>
