--- a/discoveryourair.html
+++ b/discoveryourair.html
@@ -45,8 +45,8 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="foundsoundscapes.html">Back</a>
-            <a class="flip" href="posters.html">Next</a>
+            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="mariovoid.html">Next</a>
         </div>
         </section>
 
@@ -59,7 +59,7 @@
 </section>
     
     <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
+        <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
         <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
         <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     </section>
