--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="main top" style="grid-template-columns: 29% 35.5% 35.5%">
     <a class="name">Mikki</a>
     <a class="flip about">About</a>
-    <a class="flip list">Contact</a>
+    <a href="mailto:mikki@janower.net" target="_blank" class="flip list">Contact</a>
     <!--<a class="flip email" href="mailto:mikki@janower.net" target="_blank">@</a>-->
     </section>
 
@@ -30,7 +30,7 @@
     <div id="about" style="display:none;">
         <div class="p"><p>Mikki is a designer, researcher, and art director logging on from Brooklyn, New York.</p>
             <br><p>Currently at <a href="https://www.nytimes.com/" tagret="_blank">The New York Times</a> and <a href="https://thecreativeindependent.com/archive/" target="_blank">The Creative Independent</a>. Previously a research fellow at <a href="guggenheim.org" target="_blank">The Guggenheim Museum</a>. Winner of a <a href="https://thedesignkids.org/awards/tdk-awards-20/" target="_blank">2020 TDK Award</a>.</p></div>
-        <div class="contact"><p>Always open to new projects, collaborations, conversations, and friends.</p><br><a href="mailto:mikki@janower.net" target="_blank">Email</a><br><a href="http://instagram.com/mikki.indd" target="_blank"> Instagram</a><br><a href="https://mikkijanower.work/assets/Janower_Resume.pdf" target="_blank">Resume</a><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>--></div>
+        <div class="contact"><p>Always open to new projects, collaborations, conversations, and friends.</p><br><a href="mailto:mikki@janower.net" target="_blank">Email</a><br><a href="http://instagram.com/mikki.work" target="_blank"> Instagram</a><br><span>Resume upon request</span><br><!--<a href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>--></div>
        <!-- <span style="display:none;">Contact via</span><div class="mobilecontact"><a class="flip" style="white-space: nowrap;" href="http://instagram.com/mikki.indd" target="_blank"> Instagram</a><a class="flip" style="white-space: nowrap;" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a><a class="flip" style="white-space: nowrap;" href="https://mikkijanower.work/assets/Janower_Resume.pdf" target="_blank">Resume</a><a class="flip" style="white-space: nowrap;" href="mailto:mikki@janower.net" target="_blank">Email</a> </div>-->
         <img src="assets/headshot.jpg"> 
       <!--  <div class="format"><span class="listview">List</span><span class="galleryview">Gallery</span></div></div>-->
@@ -96,7 +96,7 @@
     </div>
 </div>
 <div class="listing full">
-    <div class="info"><span class="title">Issues 19-22</span>
+    <div class="info"><span class="title">Armour Issues 19-22</span>
         <br><span class="description">Armour Magazine</span>
     <div class="type">Creative Direction</div>
     <br><span class="year">2017 – 2020</span></div>
