--- a/joshualeifer.html
+++ b/joshualeifer.html
@@ -47,8 +47,8 @@
     </div>
        
         <div id="projfooter">
-            <a class="flip" href="majorarcana.html">Back</a>
-            <a class="flip" href="reconnatypeface.html">Next</a>
+            <a class="flip" href="index.html">Back</a>
+            <a class="flip" href="armour.html">Next</a>
         </div>
         </section>
 
@@ -60,7 +60,7 @@
     <img src="assets/headshot.jpg">    
 </section>
     <section class="bottom sticky">
-    <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
+    <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
     <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
     <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     </section>
