--- a/mariovoid.html
+++ b/mariovoid.html
@@ -42,8 +42,8 @@
          </div>
        
         <div id="projfooter">
-            <a class="flip" href="quarterly.html">Back</a>
-            <a class="flip" href="cyberotica.html">Next</a>
+            <a class="flip" href="discoveryourair.html">Back</a>
+            <a class="flip" href="postcursor.html">Next</a>
         </div>
         </section>
 
