--- a/reconnatypeface.html
+++ b/reconnatypeface.html
@@ -49,7 +49,7 @@
          </div>
        
         <div id="projfooter">
-            <a class="flip" href="joshualeifer.html">Back</a>
+            <a class="flip" href="index.html">Back</a>
             <a class="flip" href="foundsoundscapes.html">Next</a>
         </div>
         </section>
