--- a/reflections.html
+++ b/reflections.html
@@ -69,7 +69,7 @@
 </section>
     
     <section class="bottom sticky">
-        <a class="flip" href="https://www.instagram.com/mikki.indd/" target="_blank">Instagram</a>
+        <a class="flip" href="https://www.instagram.com/mikki.work/" target="_blank">Instagram</a>
         <a class="flip" href="mailto:mikki@janower.net" target="_blank">Email</a>
         <a class="flip" href="https://www.are.na/mikki-janower" target="_blank">Are.na</a>
     </section>
